--- a/index.html
+++ b/index.html
@@ -8,61 +8,59 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <base href="/">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <head>
+    <meta charset="utf-8" />
+    <base href="/" />
+    <meta
+      name="viewport"
+      content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes"
+    />
 
-  <title>SHOP</title>
-  <meta name="description" content="Polymer Shop Demo">
+    <title>EASYSEC E-SHOP</title>
+    <meta name="description" content="Polymer Shop" />
 
-  <link rel="shortcut icon" sizes="32x32" href="images/shop-icon-32.png">
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@Polymer">
-  <meta property="og:type" content="website">
-  <meta property="og:site_name" content="SHOP">
-  <meta name="theme-color" content="#fff">
-  <link rel="manifest" href="manifest.json">
+    <link rel="shortcut icon" sizes="32x32" href="images/shop-icon-32.png" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@Polymer" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="SHOP" />
+    <meta name="theme-color" content="#fff" />
+    <link rel="manifest" href="manifest.json" />
 
-  <style>
+    <style>
+      body {
+        margin: 0;
+        font-family: "Roboto", "Noto", sans-serif;
+        font-size: 13px;
+        line-height: 1.5;
+        min-height: 100vh;
+      }
 
-    body {
-      margin: 0;
-      font-family: 'Roboto', 'Noto', sans-serif;
-      font-size: 13px;
-      line-height: 1.5;
-      min-height: 100vh;
-    }
+      /* styling for render while resources are loading */
+      shop-app[unresolved] {
+        display: block;
+        min-height: 101vh;
+        line-height: 68px;
+        text-align: center;
+        font-size: 16px;
+        font-weight: 600;
+        letter-spacing: 0.3em;
+        color: #202020;
+        padding: 0 16px;
+        overflow: visible;
+      }
+    </style>
+  </head>
+  <body>
+    <shop-app unresolved>SHOP</shop-app>
 
-    /* styling for render while resources are loading */
-    shop-app[unresolved] {
-      display: block;
-      min-height: 101vh;
-      line-height: 68px;
-      text-align: center;
-      font-size: 16px;
-      font-weight: 600;
-      letter-spacing: 0.3em;
-      color: #202020;
-      padding: 0 16px;
-      overflow: visible;
-    }
+    <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <script type="module" src="src/shop-app.js"></script>
 
-  </style>
-
-</head>
-<body>
-
-  <shop-app unresolved>SHOP</shop-app>
-
-  <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-  <script type="module" src="src/shop-app.js"></script>
-
-  <script>
-    window.performance && performance.mark && performance.mark('index.html');
-  </script>
-
-</body>
+    <script>
+      window.performance && performance.mark && performance.mark("index.html");
+    </script>
+  </body>
 </html>
