--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@Polymer" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="SHOP" />
+    <meta property="og:site_name" content="E-SHOP" />
     <meta name="theme-color" content="#fff" />
     <link rel="manifest" href="manifest.json" />
 
@@ -54,7 +54,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
   </head>
   <body>
-    <shop-app unresolved>SHOP</shop-app>
+    <shop-app unresolved>EASYSEC E-SHOP</shop-app>
 
     <script src="node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <script type="module" src="src/shop-app.js"></script>
